--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 bcrypt==4.0.1
 Flask==2.2.3
 mysql-connector-python==8.0.32
-black==23.1.0
+black==23.3.0
+selenium==4.8.3
+pandas==2.0.0
 Flask-JWT-Extended==4.4.4
