--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bulma": "^0.9.4",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
     "mapbox-gl": "^2.12.1",
     "pinia": "^2.0.29",
     "sass": "^1.57.1",
